@@ -1,5 +1,7 @@
 2010-05-12  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* generator/forLatex.sh: Automatic latex table generation. 
+
 	* generator/summaryAT.sh: Detect additional message for mem-out.
 
 2010-05-07  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
